fixed bugs and changed max price to include only visible items

--- a/frontend/src/app/catalog2/catalog2.component.scss
+++ b/frontend/src/app/catalog2/catalog2.component.scss
@@ -9,6 +9,16 @@
     
   }
 
+.fullimg {
+  height: 45%; 
+  width: 100%;
+  object-fit: cover ;
+  transition: 0.5s;
+  
+  cursor: pointer;
+  /* this centers and crops the image so that it doesn't break the aspect ratio */
+  }
+
  
   section {
     display: flex;
